# gui-axis-finder

./: .gitignore  Dockerfile  Readme.md  pyproject.toml
.ipynb_checkpoints/: example_notebook-checkpoint.ipynb
examples/: notebook.ipynb
src/axis_finder/: __main__.py  app.py  image.py
